# moxie2

./: Cargo.toml  README.md
examples/: basic.rs  hello.rs
macros/: Cargo.toml
macros/src/: lib.rs
nested_slots/: Cargo.toml
nested_slots/impl/: Cargo.toml
nested_slots/impl/src/: lib.rs  local_slots.rs  nested_slots.rs  utils.rs
nested_slots/impl/tests/: nested_slots_expansion.rs
nested_slots/src/: lib.rs
src/: lib.rs
