[package]
name = "moxie2"
version = "0.1.0"
authors = ["zetanumbers <zeta0.114942@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.11.1"
futures = "0.3.12"
moxie2-macros = { path = "macros" }

[dev-dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[workspace]
members = ["macros"]
