[package]
name = "moxie2"
version = "0.1.0"
authors = ["zetanumbers <zeta0.114942@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.11.1"
futures = { version = "0.3.12", default-features = false }
moxie2_macros = { path = "macros" }

[dev-dependencies]
async-std = "1.9.0"
futures = { version = "0.3.12", features = ["executor"] }

[workspace]
members = ["macros"]
