[package]
name = "moxie2"
version = "0.1.0"
authors = ["zetanumbers <zeta0.114942@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = "0.12.0"
futures = { version = "0.3.12", default-features = false }
nested_slots = { path = "nested_slots" }

[dev-dependencies]
async-std = "1.9.0"
futures = { version = "0.3.12", features = ["executor"] }

[workspace]
members = ["nested_slots", "nested_slots/impl"]
