[package]
name = "moxie2_macros"
version = "0.1.0"
authors = ["zetanumbers <zeta0.114942@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.8"
proc-macro2 = "1.0.24"

[dependencies.syn]
version = "1.0.60"
default-features = false
features = [
    "visit-mut",
    "extra-traits",
    "full",
    "parsing",
    "printing",
    "clone-impls",
    "proc-macro",
]
