[package]
name = "nested_slots_impl"
version = "0.1.0"
authors = ["zetanumbers <zeta0.114942@gmail.com>"]
edition = "2018"

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.24"
derive-syn-parse = "0.1.3"
darling = "0.12.0"

[dependencies.syn]
version = "1.0.60"
default-features = false
features = [
    "visit-mut",
    "extra-traits",
    "full",
    "parsing",
    "printing",
    "clone-impls",
]
